--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     <!-- <script src="http://code.jquery.com/jquery-1.11.0.min.js"></script> -->
 
     <script type="text/javascript" src="functions.js"></script>
-    <!-- <script type="text/javascript" src="classes.js"></script> -->
+    <script type="text/javascript" src="ComplexNumberClass.js"></script>
 
   </body>
 </html>
